--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body class="page">
-
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
     <nav class="header__langs">
@@ -20,7 +19,6 @@
       <a class="header__lang-link" href="#">En</a>
     </nav>
   </header>
-
   <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
@@ -28,7 +26,6 @@
       <img class="lead__img" src="images/lead-polka.jpg" alt="Девушка">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
-
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
@@ -45,7 +42,6 @@
         <li class="intro__list">Аэропортов <span class="intro__list-number">241</span></li>
       </ul>
     </section>
-
     <section class="photo-grid">
       <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно в поезде">
       <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы с облаками">
@@ -60,11 +56,10 @@
       <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Гора и пляж">
       <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горы с облаками">
     </section>
-
     <section class="places">
       <div class="place">
         <h3 class="place__title">Куршская коса</h3>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="Море"></img>
+        <img class="place__image" src="./images/place-kosa.jpg" alt="Море">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="park-kosa.ru" target="_blank">park-kosa.ru</a>
@@ -81,7 +76,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Кольский</h3>
-        <img class="place__image" src="./images/place-kolsky.jpg" alt="Горы"></img>
+        <img class="place__image" src="./images/place-kolsky.jpg" alt="Горы">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
@@ -99,7 +94,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Алтай</h3>
-        <img class="place__image" src="./images/place-altai.jpg" alt="Лес"></img>
+        <img class="place__image" src="./images/place-altai.jpg" alt="Лес">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
@@ -117,7 +112,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Зимний Байкал</h3>
-        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед"></img>
+        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
@@ -135,7 +130,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Карелия</h3>
-        <img class="place__image" src="./images/place-karelia.jpg" alt="Лес"></img>
+        <img class="place__image" src="./images/place-karelia.jpg" alt="Лес">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
@@ -150,7 +145,6 @@
         </div>
       </div>
     </section>
-
     <section class="cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h3 class=" cover__title">До Байкала «на собаках»</h3>
@@ -159,7 +153,6 @@
       </a>
     </section>
   </main>
-
   <footer class="footer">
     <nav class="footer__links">
       <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
@@ -170,7 +163,6 @@
     </nav>
     <p class="footer__copyright">© 2022. Надежда Дикова</p>
   </footer>
-
 </body>
 
 </html>
