--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 <body class="page">
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
-    <nav class="header__langs">
+    <div class="header__langs">
       <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
       <a class="header__lang-link" href="#">En</a>
-    </nav>
+    </div>
   </header>
   <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-      <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-      <img class="lead__img" src="images/lead-polka.jpg" alt="Девушка">
-      <p class="lead__caption">ваша полка — верхняя</p>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <figure class="lead__figure">
+        <img class="lead__img" src="images/lead-polka.jpg" alt="Девушка">
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -57,7 +59,7 @@
       <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горы с облаками">
     </section>
     <section class="places">
-      <div class="place">
+      <article class="place">
         <h3 class="place__title">Куршская коса</h3>
         <img class="place__image" src="./images/place-kosa.jpg" alt="Море">
         <div class="place__website">
@@ -68,13 +70,14 @@
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
-          <p class="place__paragraph place__paragraph-break">На этом Калининградская область не заканчивается. Для
+          <p class="place__paragraph">На этом Калининградская область не заканчивается.
+            Для
             путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и
             немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
             спокойствие природы и запах стального, прохладного моря.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h3 class="place__title">Кольский</h3>
         <img class="place__image" src="./images/place-kolsky.jpg" alt="Горы">
         <div class="place__website">
@@ -91,8 +94,8 @@
             накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
             в Мурманск.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h3 class="place__title">Алтай</h3>
         <img class="place__image" src="./images/place-altai.jpg" alt="Лес">
         <div class="place__website">
@@ -109,8 +112,8 @@
             разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
             пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h3 class="place__title">Зимний Байкал</h3>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед">
         <div class="place__website">
@@ -121,14 +124,14 @@
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
-          <p class="place__paragraph place__paragraph-break">Конечно, это всё так. Но Байкал ещё идеальное место
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место
             для соревнований по
             скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как
             можно бóльшую скорость на льду. В марте 2019 года на фестивале
             «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h3 class="place__title">Карелия</h3>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Лес">
         <div class="place__website">
@@ -143,13 +146,13 @@
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
-      </div>
+      </article>
     </section>
     <section class="cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h3 class=" cover__title">До Байкала «на собаках»</h3>
-        <h4 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.</h4>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</p>
       </a>
     </section>
   </main>
